<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TossMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">704433939682665</string>
    <string name="hangtime">HANGTIME: </string>
    <string name="initValue">0.000s</string>
    <string name="initHeightValue">0.00m</string>
    <string name="speed">MAXSPEED: </string>
    <string name="initSpeedValue">0.00m/s</string>
    <string name="height">HEIGHT: </string>
    <string name="reset">RESET</string>
    <string name="share">SHARE</string>

</resources>
